--- a/addons/ewei_shopv2/template/mobile/default/order/create.html
+++ b/addons/ewei_shopv2/template/mobile/default/order/create.html
@@ -642,7 +642,7 @@
             <div class="fui-cell">
                 <div class="fui-cell-label">选择地区</div>
                 <div class="fui-cell-info c000">
-                    <input type="text" id='areas'  name='areas' data-value="" value="" placeholder="所在地区"  class="fui-input" readonly=""/>
+                    <input type="text" id='areas'  name='areas' data-value="" value="河南省 郑州市 高新区" placeholder="所在地区"   class="fui-input"/>
                 </div>
                 <div class="fui-cell-remark noremark"><i class="icon icon-arrow-down" style="font-size:.8rem;color:#b2b2b2"></i> </div>
             </div>
