--- a/addons/ewei_shopv2/template/web_v3/_header_base.html
+++ b/addons/ewei_shopv2/template/web_v3/_header_base.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{if !empty($copyright) && !empty($copyright['title'])}{$copyright['title']}{/if}</title>
-        <link rel="shortcut icon" href="{$_W['siteroot']}{$_W['config']['upload']['attachdir']}/{if !empty($_W['setting']['copyright']['icon'])}{$_W['setting']['copyright']['icon']}{else}images/global/wechat.jpg{/if}" />
+        <link rel="shortcut icon" href="{if !empty($_W['setting']['copyright']['icon'])}{$_W['attachurl']}{$_W['setting']['copyright']['icon']}{else}images/global/wechat.jpg{/if}" />
         <link href="{php echo EWEI_SHOPV2_LOCAL}static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
         <link href="{php echo EWEI_SHOPV2_LOCAL}static/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
         <link href="{php echo EWEI_SHOPV2_LOCAL}static/css/animate.css" rel="stylesheet">
