--- a/addons/ewei_shopv2/plugin/diypage/template/mobile/default/template/tpl_banner.html
+++ b/addons/ewei_shopv2/plugin/diypage/template/mobile/default/template/tpl_banner.html
@@ -2,7 +2,7 @@
     <div class='fui-swipe'>
         <div class='fui-swipe-wrapper'>
             {loop $diyitem['data'] $banneritem}
-                <a class='fui-swipe-item' href="{$banneritem['linkurl']}" data-nocache="true"><img src="{php echo tomedia($banneritem['imgurl'])}" style="display: block; width: 100%; height: auto;"/></a>
+                <a class='fui-swipe-item' href="{$banneritem['linkurl']}" data-nocache="true"><img src="{php echo tomedia($banneritem['imgurl'])}" style="display: block; width: 100%; height: 230px;"/></a>
             {/loop}
         </div>
         <style>
