--- a/addons/ewei_shopv2/plugin/diypage/static/css/foxui.diy.css
+++ b/addons/ewei_shopv2/plugin/diypage/static/css/foxui.diy.css
@@ -367,6 +367,8 @@
 
 .fui-picturew .item img {
     display: block;
+    height: 80px;
+    width: 136px;
     max-width: 100%;
     max-height: 100%;
 }
