--- a/addons/ewei_shopv2/template/mobile/default/static/css/style.css
+++ b/addons/ewei_shopv2/template/mobile/default/static/css/style.css
@@ -287,14 +287,14 @@ a {
     position: absolute;
     bottom: 0;
     right: 0;
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
     z-index: 10;
 }
 
 .fui-swipe .salez img {
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
     display: block;
 }
 
